# esp32-idf-starter

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  main.c
